--- a/manuscript/notes.tex
+++ b/manuscript/notes.tex
@@ -610,7 +610,7 @@ Let $A$ and $B$ be some events; $X$, $Y$, and $Z$ are random variables.
     \emph{Note:} To calculate $\Phi(z)$ for $z\geq0$, find the row using the
     first decimal in $z$, and find the second decimal to find the correct
     column. For $z<0$, use the symmetry of the distribution to find  $\Phi(z) =
-    1-\Phi(-z)$. 
+    1-\Phi(-z)$. The table is calculated with the R-function \texttt{pnorm} \citep{R2023}.
 \end{table}
 
 
