Added minor change.

--- a/manuscript/notes.tex
+++ b/manuscript/notes.tex
@@ -332,7 +332,9 @@ Our task is, based on a sample from the distribution of $X$, determine
 whether to keep on insisting on $H_0$ or reject that in favor of
 $H_1$. What we want is often to fix the probability of Type I error
 (``significance level'') to $\alpha=0.01,0.05,\dots$, and conditional
-on that, minimize probability of type II error.
+on that, minimize probability of type II error. By \textbf{Type I error} we mean that
+a null hypothesis is rejected when the null is true; by \textbf{Type II error} we mean
+that the null hypothesis is not rejected even though the null is false.
 
 Strictly speaking, we decide on a regions of $(X_1,\dots,X_n)\in C$ in
 which to accept or reject $H_0$, but in practice we define
